crates/ironic/tests/ui/fail/injectable_non_arc.rs
use ironic::Injectable;

#[derive(Injectable)]
struct InvalidProvider {
    dependency: String,
}

fn main() {}
