crates/ironic/tests/ui/fail/injectable_non_arc.stderr
error: injectable fields must have type `Arc<T>`
 --> crates/ironic/tests/ui/fail/injectable_non_arc.rs:5:17
  |
5 |     dependency: String,
  |                 ^^^^^^
